# SpiritBox-Beta

./: AGENTS.md  README.md  pyproject.toml
cli/: ACSII
src/spiritbox/: __init__.py  __main__.py
src/spiritbox/agents/: __init__.py  analysis.py  base.py  bridge.py  cleanup.py  containment.py  heuristic.py  logging.py  monitoring.py
src/spiritbox/cli/: __init__.py  banner.py  main.py
src/spiritbox/native/: __init__.py  containment.cpp
src/spiritbox/runtime/: __init__.py  containers.py  controller.py
