[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spiritbox"
version = "0.1.0"
description = "SpiritBox transient containment console"
authors = [{name = "Exoterik Labs"}]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
spiritbox = "spiritbox.cli.main:main"